ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>TDSB App</description>
    <label>TDSB Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TDSB Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>