ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Project__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>