ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Project__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>