ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Project__c/fields/Date_of_Warranty_Issue__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Warranty_Issue__c</fullName>
    <label>Date of Warranty Issue</label>
    <type>Date</type>
</CustomField>