ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Project__c/fields/IKO_Assigned_Rep__c.field-meta.xml
<CustomField>
    <fullName>IKO_Assigned_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IKO Assigned Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TDSB_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>