ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Project__c/fields/Job_Complete__c.field-meta.xml
<CustomField>
    <fullName>Job_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick once job is fully complete and Site Reports can be sent to Warranties</description>
    <inlineHelpText>Tick once job is fully complete and Site Reports can be sent to Warranties</inlineHelpText>
    <label>Job Complete</label>
    <type>Checkbox</type>
</CustomField>