ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Project__c/fields/Last_Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Last_Site_Visit__c</fullName>
    <description>Date of the last site visit completed</description>
    <inlineHelpText>Date of the last site visit completed</inlineHelpText>
    <label>Last Site Visit</label>
    <type>Date</type>
</CustomField>