ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Project__c/fields/Project_Defi__c.field-meta.xml
<CustomField>
    <fullName>Project_Defi__c</fullName>
    <label>Project Deficiencies</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Job_Complete__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deficiencies</fullName>
            </value>
            <value>
                <fullName>No Deficiencies</fullName>
                <default>true</default>
                <label>No Deficiencies</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>