ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Project__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>Size of Project in Square feet</description>
    <label>Size (ft²)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>