ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Project__c/fields/System_Type__c.field-meta.xml
<CustomField>
    <fullName>System_Type__c</fullName>
    <label>System Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BUR</fullName>
            </value>
            <value>
                <fullName>Mod-Bit</fullName>
            </value>
            <value>
                <fullName>BUR &amp; Mod-Bit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>