ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Project__c/fields/Warranty_Issued__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warranty Issued?</label>
    <type>Checkbox</type>
</CustomField>